<resources>
    <string name="app_name">TutuRuApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_dialog_text">Подождите, идёт загрузка станций</string>
    <string name="station_button_text">Детали</string>
    <string name="alert_dialog_cancel">Отмена</string>
    <string name="alert_dialog_ok">Выбрать</string>
    <string name="from_hint">Станция отправления</string>
    <string name="to_hint">Станция прибытия</string>
    <string name="date_hint">Дата отправления</string>
    <string name="country_title">Страна</string>
    <string name="city_title">Город</string>
    <string name="latitude_title">Широта</string>
    <string name="longtitude_title">Долгота</string>
    <string name="network_error">Необходим интернет для загрузки станций.</string>
    <string name="save_in_db_error">Ошибка при загрузке станций.</string>
    <string name="app_info_dialog_ok">OK</string>
    <string name="copyright">"© "</string>
    <string name="developer_name">Марухин Михаил</string>
    <string name="info_app_name_description">"App name - "</string>
    <string name="version_description">"Version: "</string>
    <string name="build_type_description">"Build type: "</string>
    <string name="scheduler">Расписание</string>
    <string name="about">О приложении</string>
</resources>
