<layout>

    <data>

        <variable
            name="station"
            type="com.marukhin.tuturuapp.core.db.models.Station"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/colorPrimary"
                  android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small_8"
            app:cardBackgroundColor="@color/greyLight"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:textColor="@android:color/white"
                    android:text="@{station.stationTitle}"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StationField.Left"
                        android:text="@string/country_title"/>

                    <TextView
                        style="@style/StationField.Right"
                        android:text="@{station.countryTitle}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StationField.Left"
                        android:text="@string/city_title"/>

                    <TextView
                        style="@style/StationField.Right"
                        android:text="@{station.cityTitle}"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StationField.Left"
                        android:text="@string/latitude_title"/>

                    <TextView
                        style="@style/StationField.Right"
                        android:text="@{station.latitude.toString()}"

                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StationField.Left"
                        android:text="@string/longtitude_title"/>

                    <TextView
                        style="@style/StationField.Right"
                        android:text="@{station.longitude.toString()}"
                        />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>