<layout>

    <data>

        <variable
            name="presenter"
            type="com.marukhin.tuturuapp.root.MainPresenter"/>
    </data>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.marukhin.tuturuapp.root.MainActivity">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:theme="@style/AppTheme.AppBarOverlay"
                >

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimaryDark"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </android.support.design.widget.AppBarLayout>
            <!--Для снятия фокуса с edittextов-->
            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:focusable="true">

                <requestFocus/>
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="@dimen/card_corner"
                    app:cardElevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_vertical_margin">

                        <android.support.design.widget.TextInputLayout
                            style="@style/CustomTextLayout"
                            android:hint="@string/from_hint"
                            android:visibility="@{presenter.isIdleViewState()||presenter.isFromViewState()}"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/from_et"
                                style="@style/CustomEditText"
                                android:focusableInTouchMode="@{presenter.isFromViewState()}"
                                android:onClick="@{()->presenter.onFromClick()}"
                                android:text="@={presenter.fromText}"
                                />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/CustomTextLayout.To"
                            android:hint="@string/to_hint"
                            android:visibility="@{presenter.isIdleViewState()||presenter.isToViewState()}"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/to_et"
                                style="@style/CustomEditText"
                                android:focusableInTouchMode="@{presenter.isToViewState()}"
                                android:onClick="@{()->presenter.onToClick()}"

                                android:text="@={presenter.toText}"
                                />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/CustomTextLayout.To"
                            android:hint="@string/date_hint"
                            android:visibility="@{presenter.isIdleViewState()}"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/date_et"
                                style="@style/CustomEditText"
                                android:focusable="false"
                                android:onClick="@{()->presenter.onDateClick()}"
                                />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <ExpandableListView
                    android:id="@+id/stations_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1dp"
                    android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:visibility="@{!presenter.isIdleViewState()}"
                    />
            </LinearLayout>


        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:menu="@menu/activity_main_drawer"/>

    </android.support.v4.widget.DrawerLayout>
</layout>